--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -133,6 +133,7 @@
     <Compile Include="FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
     <Compile Include="Types\Basic\CByteArray2.cs" />
+    <Compile Include="Types\Basic\CVector3.cs" />
     <Compile Include="Types\Basic\IdHandle.cs" />
     <Compile Include="Types\Basic\EntityHandle.cs" />
     <Compile Include="Types\Utils\CBufferUInt16.cs" />
