--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -26,6 +26,7 @@
   <package id="OpenGL.Net.WinForms" version="0.7.1" targetFramework="net461" />
   <package id="PropertyGridEx" version="1.0.0" targetFramework="net461" />
   <package id="RtfPipe" version="0.7.0.6" targetFramework="net461" />
+  <package id="SharpVectors.Reloaded" version="1.5.0" targetFramework="net48" />
   <package id="SharpZipLib" version="1.0.0-alpha2" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
