Terraintile group parsing

--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -141,6 +141,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RenderHelper.cs" />
+    <Compile Include="Terrain\TileGroup.cs" />
     <Compile Include="WKMesh.cs" />
     <Compile Include="frmTerrain.cs">
       <SubType>Form</SubType>
